--- a/src/components/atividade/atividade.module.css
+++ b/src/components/atividade/atividade.module.css
@@ -9,23 +9,63 @@
   justify-content: space-between;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.06);
 }
-.checkContainer {
-  width: 18px;
-  height: 18px;
-  background: none;
-  border: none;
+
+.round {
+  position: relative;
 }
 
-.checkContainer div {
-  width: 100%;
-  height: 100%;
-  border-radius: 999px;
-  border: 2px solid #16B660;
+.roundTop{
+  margin-top: -0.5rem;
+}
+
+.round label {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 28px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 28px;
+}
+
+.round label:after {
+  border: 2px solid #fff;
+  border-top: none;
+  border-right: none;
+  content: "";
+  height: 6px;
+  left: 7px;
+  opacity: 0;
+  position: absolute;
+  top: 8px;
+  transform: rotate(-45deg);
+  width: 12px;
+  
+}
+
+.round input[type="checkbox"] {
+  visibility: hidden;
+}
+
+.round input[type="checkbox"]:checked + label {
+  background-color: #66bb6a;
+  border-color: #66bb6a;
+}
+
+.round input[type="checkbox"]:checked + label:after {
+  opacity: 1;
+}
+
+.lineThrougt{
+  text-decoration: line-through;
 }
 
 .deleteButton {
   background: none;
   border: none;
+  cursor: pointer;
   color: var(--danger);
 }
 
